First polymer extractor

--- a/polymer/index.html
+++ b/polymer/index.html
@@ -82,12 +82,12 @@
                             <editor type='json' content="infoBaseContent" readonly></editor>
                         </md-tab-body>
                     </md-tab>
-                    <md-tab id="model">
+                    <!-- <md-tab id="model">
                         <md-tab-label>Dependencies</md-tab-label>
                         <md-tab-body>
                             <dependency-graph content="infoBaseContent" width=660 height=700></dependency-graph>
                         </md-tab-body>
-                    </md-tab>
+                    </md-tab> -->
                     <md-tab id="infobase">
                         <md-tab-label>Model</md-tab-label>
                         <md-tab-body>
